{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 125,
  "lineage": "1a34ed20-6ee6-2293-3401-c275d1a86b1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cbe61df548a0e7a",
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:elastic-ip/eipalloc-01cbe61df548a0e7a",
            "association_id": "eipassoc-0577ed085bb479429",
            "domain": "vpc",
            "id": "eipalloc-01cbe61df548a0e7a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0af5b22867f576d46",
            "private_dns": "ip-10-1-1-237.ap-southeast-1.compute.internal",
            "private_ip": "10.1.1.237",
            "public_dns": "ec2-18-143-231-190.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.231.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012c2e8e24e2ae21d",
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:instance/i-093ae8d21ac823779",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093ae8d21ac823779",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e16b15b2c25c737a",
            "private_dns": "ip-10-1-2-61.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.61",
            "public_ip": "3.0.98.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09517e001dd8d6c2e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067a8136ecd6897d1",
            "tags": {
              "CreatedBy": "AIDA5BYA54VGFNU6EIYPE",
              "Name": "bastion_host_day3",
              "instance-stop": "true"
            },
            "tags_all": {
              "CreatedBy": "AIDA5BYA54VGFNU6EIYPE",
              "Name": "bastion_host_day3",
              "instance-stop": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09152e020d876e9d2"
            ]
          },
          "dependencies": [
            "aws_key_pair.instance_key",
            "aws_security_group.allow_ssh",
            "aws_subnet.public_b_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myprivate_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012c2e8e24e2ae21d",
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:instance/i-01a498d1231ddc57b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a498d1231ddc57b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instance-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039e21f76d1b18002",
            "private_dns": "ip-10-1-3-218.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02dc3f2caaa1d0ac1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5f8f6cbe7f9159a",
            "tags": {
              "CreatedBy": "AIDA5BYA54VGFNU6EIYPE",
              "Name": "myprivate_instance",
              "instance-stop": "true"
            },
            "tags_all": {
              "CreatedBy": "AIDA5BYA54VGFNU6EIYPE",
              "Name": "myprivate_instance",
              "instance-stop": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09152e020d876e9d2"
            ]
          },
          "dependencies": [
            "aws_key_pair.instance_key",
            "aws_security_group.allow_ssh",
            "aws_subnet.private_a_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "day3_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:internet-gateway/igw-025c7f8d03f7b74cb",
            "id": "igw-025c7f8d03f7b74cb",
            "owner_id": "897113253196",
            "tags": {
              "Name": "Day3_IGW"
            },
            "tags_all": {
              "Name": "Day3_IGW"
            },
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "dependencies": [
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "day3_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cbe61df548a0e7a",
            "association_id": "eipassoc-0577ed085bb479429",
            "connectivity_type": "public",
            "id": "nat-0f659aa272ddc078d",
            "network_interface_id": "eni-0af5b22867f576d46",
            "private_ip": "10.1.1.237",
            "public_ip": "18.143.231.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08de502f382d1b1ed",
            "tags": {
              "Name": "Day3_NAT"
            },
            "tags_all": {
              "Name": "Day3_NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_a_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:route-table/rtb-0b00e6449abf1a284",
            "id": "rtb-0b00e6449abf1a284",
            "owner_id": "897113253196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f659aa272ddc078d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rtb"
            },
            "tags_all": {
              "Name": "private_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.day3_NAT",
            "aws_subnet.public_a_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:route-table/rtb-055105e3fba8953a7",
            "id": "rtb-055105e3fba8953a7",
            "owner_id": "897113253196",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025c7f8d03f7b74cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rtb"
            },
            "tags_all": {
              "Name": "public_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.day3_igw",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068393737fb81561e",
            "route_table_id": "rtb-0b00e6449abf1a284",
            "subnet_id": "subnet-0e5f8f6cbe7f9159a"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.day3_NAT",
            "aws_route_table.private_rtb",
            "aws_subnet.private_a_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049f65654a05b6f3b",
            "route_table_id": "rtb-0b00e6449abf1a284",
            "subnet_id": "subnet-0ab80159d64c046a8"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.day3_NAT",
            "aws_route_table.private_rtb",
            "aws_subnet.private_b_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d041f9c075ca5bf",
            "route_table_id": "rtb-055105e3fba8953a7",
            "subnet_id": "subnet-08de502f382d1b1ed"
          },
          "dependencies": [
            "aws_internet_gateway.day3_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_a_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c614ef0f3b07bf0f",
            "route_table_id": "rtb-055105e3fba8953a7",
            "subnet_id": "subnet-067a8136ecd6897d1"
          },
          "dependencies": [
            "aws_internet_gateway.day3_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_b_subnet",
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:security-group/sg-09152e020d876e9d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09152e020d876e9d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240726074419794100000001",
            "name_prefix": "terraform-",
            "owner_id": "897113253196",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-day3-vm"
            },
            "tags_all": {
              "Name": "sgrp-day3-vm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:subnet/subnet-0e5f8f6cbe7f9159a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5f8f6cbe7f9159a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897113253196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_a_subnet"
            },
            "tags_all": {
              "Name": "private_a_subnet"
            },
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "dependencies": [
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:subnet/subnet-0ab80159d64c046a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab80159d64c046a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897113253196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_b_subnet"
            },
            "tags_all": {
              "Name": "private_b_subnet"
            },
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "dependencies": [
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:subnet/subnet-08de502f382d1b1ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08de502f382d1b1ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897113253196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_a_subnet"
            },
            "tags_all": {
              "Name": "public_a_subnet"
            },
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "dependencies": [
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:subnet/subnet-067a8136ecd6897d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a8136ecd6897d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "897113253196",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_b_subnet"
            },
            "tags_all": {
              "Name": "public_b_subnet"
            },
            "vpc_id": "vpc-0b97473ab1ed6bf74"
          },
          "dependencies": [
            "aws_vpc.day3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "day3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:897113253196:vpc/vpc-0b97473ab1ed6bf74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c942a4b44de6f04c",
            "default_route_table_id": "rtb-06327d4ec77694392",
            "default_security_group_id": "sg-0d43b6990f5afcc57",
            "dhcp_options_id": "dopt-39f8185c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b97473ab1ed6bf74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06327d4ec77694392",
            "owner_id": "897113253196",
            "tags": {
              "Name": "day3_vpc"
            },
            "tags_all": {
              "Name": "day3_vpc"
            }
          }
        }
      ]
    }
  ]
}